# magisterial-python

./: .gitignore  LICENSE  README.md  openapi.json  pyproject.toml
.github/workflows/: ci.yml  publish.yml
magisterial/: __init__.py  _client.py  _exceptions.py  _pagination.py  types.py
magisterial/resources/: __init__.py  alerts.py  exports.py  games.py  persons.py  players.py  portal.py  query.py  reference.py  teams.py
scripts/: sync-types.sh
tests/: test_client.py
