[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "magisterial"
version = "0.2.0"
description = "Official Python SDK for the Magisterial college sports data API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Magisterial", email = "comfere@magisterial.ai" }]
keywords = ["magisterial", "ncaa", "college sports", "transfer portal", "api", "sdk"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.24.0",
  "pydantic>=2.5.0",
]

[project.urls]
Homepage = "https://magisterial.ai"
Documentation = "https://api.magisterial.ai/v1/docs"
Repository = "https://github.com/bluemens/magisterial-python"
"API reference (llms.txt)" = "https://api.magisterial.ai/v1/llms.txt"

[tool.hatch.build.targets.wheel]
packages = ["magisterial"]

[tool.pytest.ini_options]
testpaths = ["tests"]
